2002-07-16  Jody Goldberg <jody@gnome.org>

	* file-types-properties.glade (</) : rearrange the extensions area.
	* mime-edit-dialog.c (mime_edit_dialog_init) : add when the entry is
	  activated.

2002-07-10  Jody Goldberg <jody@gnome.org>

	* mime-edit-dialog.c (mime_edit_dialog_init) : set the icon here.

2002-07-09  Jody Goldberg <jody@gnome.org>

	* file-types-properties.glade : disable the use of category defaults
	* file-types-capplet.c (launch_edit_dialog) : disable editing category
	  handlers.

2002-06-26  Jody Goldberg <jody@gnome.org>

	* mime-type-info.c (mime_type_info_load_all) : do not trust
	  gnome_vfs_mime_get_default_application.  It silently removes
	  applications that do not exist on the current system.  That makes it
	  look like they are not being assigned.
	(mime_category_info_save) : be anal.

	* mime-edit-dialog.c (validate_data) : relax the restriction here.  By
	  supplying a reasonable default to the new info it was appearing in
	  our internal data structures.  That was a useful test before we were
	  instant apply, but is no longer helpful.

2002-06-26  Jody Goldberg <jody@gnome.org>

	* file-types-capplet.c (main) : blah, test things _before_ I commit.

2002-06-25  Jody Goldberg <jody@gnome.org>

	* mime-edit-dialog.c (mime_add_dialog_new) : add de

	* file-types-capplet.c (main) : fix cmd line arg support
	  And support optional 'file_name' as a helper for generating smarter
	  defaults.

2002-06-25  Jody Goldberg <jody@gnome.org>

	* mime-edit-dialog.c (mime_edit_dialog_get_app) : typo.

2002-06-15  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=85397
	http://bugzilla.gnome.org/show_bug.cgi?id=84545
	* mime-types-model.c (mime_types_model_get_value) :
	  gtk_tree_view_search_equal_func does not like NULL.
	(IS_CATEGORY) : check for NULL.
	* file-types-capplet.c (create_dialog) : search the description not
	  the mime type.

2002-06-08  Jody Goldberg <jody@gnome.org>
