@@ -1,3 +1,8 @@
+2002-07-17  Jody Goldberg <jody@gnome.org>
+
+	* mime-edit-dialog.c (mime_edit_dialog_init) : only enable the remove
+	  button when there is a selection.
+
 2002-07-16  Jody Goldberg <jody@gnome.org>
 
 	* file-types-properties.glade (</) : rearrange the extensions area.
